--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "camelcase": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
