--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/josudoey/webpack-sample#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "camelcase": "^5.0.0",
@@ -36,6 +37,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "path-to-regexp": "^2.2.1",
     "plugin-error": "^1.0.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
