--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/josudoey/webpack-sample#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.2",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "camelcase": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^2.1.1",
@@ -42,6 +43,7 @@
     "plugin-error": "^1.0.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.9.1",
     "webpack-dev-server": "^3.2.1"
