--- a/package.json
+++ b/package.json
@@ -18,35 +18,35 @@
   },
   "homepage": "https://github.com/josudoey/webpack-sample#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.2",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "camelcase": "^5.0.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^2.1.1",
-    "del": "^3.0.0",
-    "file-loader": "^1.1.11",
-    "globby": "^8.0.1",
-    "gulp": "^4.0.0",
-    "gulp-clean-css": "^3.9.4",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-uglify": "^3.0.0",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "camelcase": "^5.3.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "del": "^4.1.1",
+    "file-loader": "^4.0.0",
+    "globby": "^10.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-uglify": "^3.0.2",
     "html-loader": "^0.5.5",
-    "html-webpack-harddisk-plugin": "^0.2.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "path-to-regexp": "^2.2.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path-to-regexp": "^3.0.0",
     "plugin-error": "^1.0.1",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
-    "webpack-dev-server": "^3.2.1"
+    "terser-webpack-plugin": "^1.3.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.0.1",
+    "webpack": "4.28.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {}
 }
