--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production gulp build",
-    "dev": "gulp dev"
+    "webpack": "webpack",
+    "build": "webpack --config webpack/config.prod.js --verbose",
+    "dev": "node ./index.js dev"
   },
   "repository": {
     "type": "git",
@@ -18,35 +19,37 @@
   },
   "homepage": "https://github.com/josudoey/webpack-sample#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.5.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.4",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "camelcase": "^5.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "core-js": "^3.1.4",
     "css-loader": "^3.0.0",
-    "del": "^4.1.1",
     "file-loader": "^4.0.0",
-    "globby": "^10.0.0",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.0.0",
-    "gulp-uglify": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path-to-regexp": "^3.0.0",
-    "plugin-error": "^1.0.1",
-    "pug": "^2.0.4",
+    "postcss-loader": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.0.1",
-    "webpack": "4.28.4",
+    "vue": "^2.6.10",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "commander": "^2.20.0"
+  }
 }
